// 14/WAKU2-MESSAGE rfc: https://rfc.vac.dev/spec/14/

syntax = "proto3";

message RateLimitProof {
  bytes proof = 1;
  bytes merkle_root = 2;
  bytes epoch = 3;
  bytes share_x = 4;
  bytes share_y = 5;
  bytes nullifier = 6;
  bytes rln_identifier = 7;
}

message WakuMessage {
  bytes payload = 1;
  string content_topic = 2;
  optional uint32 version = 3;
  optional sint64 timestamp = 10;
  optional bytes meta = 11;
  optional RateLimitProof rate_limit_proof = 21;
  optional bool ephemeral = 31;
}
